# md-ai

./: .gitignore  LICENSE  README.md  architecture_contract.yaml  pyproject.toml
apps/electron/: README.md  electron.vite.config.ts  package-lock.json  package.json  plan_render_cacache-v2-checklist.md  plan_render_cacache-v2.md  tsconfig.json
apps/electron/native/: CMakeLists.txt
apps/electron/native/chat_core/: CMakeLists.txt
apps/electron/native/chat_core/include/chat_core/: context_builder.hpp  conversation.hpp  conversation_index.hpp  error.hpp  ids.hpp  json_rpc.hpp  layout_cache.hpp  message.hpp  message_store.hpp  storage_sqlite.hpp  token_budget.hpp
apps/electron/native/chat_core/src/: context_builder.cpp  conversation_index.cpp  error.cpp  json_rpc.cpp  layout_cache.cpp  message_store.cpp  storage_sqlite.cpp  token_budget.cpp
apps/electron/native/sidecar/: CMakeLists.txt  main.cpp  protocol.hpp
apps/terminal/: App.tsx  chat.tsx  package.json  tsconfig.json  types.ts
behavior_locks/: README.md
behavior_locks/01_problems_linear_equation/: README.md  test_linear_equation_contract.py
behavior_locks/02_corpus_pipeline/: README.md  test_corpus_pipeline_contract.py
behavior_locks/03_tokenizer/: README.md  test_tokenizer_contract.py
behavior_locks/04_model/: README.md  test_model_contract.py
behavior_locks/05_trainer/: README.md  test_trainer_contract.py
behavior_locks/06_system_checkpoint/: README.md  test_checkpoint_contract.py
behavior_locks/07_evaluator/: README.md  test_evaluator_contract.py
behavior_locks/08_serving/: README.md  test_serving_contract.py
behavior_locks/09_cli_surface/: README.md  test_cli_surface_contract.py
docs/: adr_0001_architecture_boundaries.md  guide_build_corpus.md  guide_chat.md  guide_evaluate.md  guide_problems.md  guide_repo_structure.md  guide_train.md  token_normalized_grad_accum.md
recipes/chat/: checkpoints.yaml
recipes/evaluation/: addition_3term_exact.yaml  math_exact.yaml
recipes/models/: dense_50m.yaml  test_tiny.yaml  tiny.yaml  tiny_no_flash.yaml  tiny_no_remat.yaml  tiny_plain_attention.yaml  tiny_standard.yaml
recipes/tokenizers/: addition_3term_byte_bpe_512.yaml  byte_bpe_512.yaml
runs/step_00000600/: _CHECKPOINT_METADATA  _METADATA  manifest.ocdbt  metadata.json
scripts/: Filter-Copy-Files.ps1  copy-clean-repo.ps1
(+295 files in other folders)
